WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182751
[Curl] Curl Cookie Database File should be configurable using NetworkProcessCreationParameters
https://bugs.webkit.org/show_bug.cgi?id=182751
Summary
[Curl] Curl Cookie Database File should be configurable using NetworkProcessC...
Christopher Reid
Reported
2018-02-13 16:22:00 PST
In preparation for WinCairo WebKit2, the curl should follow the other ports and allow the cookie file to be configurable through the network process creation parameters.
Attachments
patch
(11.17 KB, patch)
2018-02-13 16:49 PST
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
patch
(11.17 KB, patch)
2018-02-13 16:56 PST
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.76 KB, patch)
2018-02-21 14:21 PST
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Christopher Reid
Comment 1
2018-02-13 16:49:24 PST
Created
attachment 333746
[details]
patch
EWS Watchlist
Comment 2
2018-02-13 16:50:59 PST
Attachment 333746
[details]
did not pass style-queue: ERROR: Source/WebKit/NetworkProcess/curl/NetworkProcessCurl.cpp:50: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Christopher Reid
Comment 3
2018-02-13 16:56:23 PST
Created
attachment 333748
[details]
patch Fixing style issues
youenn fablet
Comment 4
2018-02-21 13:22:32 PST
Comment on
attachment 333748
[details]
patch I do not see anything wrong there related to the 'OWNER' side. I am not very familiar with CURL, it would be good if somebody more familiar could take an additional look. View in context:
https://bugs.webkit.org/attachment.cgi?id=333748&action=review
> Source/WebKit/ChangeLog:10 > + This is parameter is not used yet, it is added to prepare for WinCairo WebKit support.
s/This is/This/
Chris Dumez
Comment 5
2018-02-21 14:20:08 PST
Was there discussion on the mailing list about adding support for Windows to WebKit2?
Christopher Reid
Comment 6
2018-02-21 14:21:23 PST
Created
attachment 334413
[details]
Patch for landing
Christopher Reid
Comment 7
2018-02-21 14:43:41 PST
(In reply to Chris Dumez from
comment #5
)
> Was there discussion on the mailing list about adding support for Windows to > WebKit2?
I don't think there was too much discussion about adding WebKit 2 support for WinCairo on the mailing list yet. Don has mentioned that was something we were working in one of our updates here:
https://lists.webkit.org/pipermail/webkit-dev/2017-November/029783.html
. We are very much interested in working towards WebKit2 support including getting WebKit2 WinCairo buildbots going. Let us know if you would like to see the discussion opened up on the mailing list some more.
Don Olmstead
Comment 8
2018-02-21 14:49:48 PST
Its actually been longer than that
https://lists.webkit.org/pipermail/webkit-dev/2017-August/029329.html
WebKit Commit Bot
Comment 9
2018-02-21 16:10:30 PST
Comment on
attachment 334413
[details]
Patch for landing Clearing flags on attachment: 334413 Committed
r228905
: <
https://trac.webkit.org/changeset/228905
>
WebKit Commit Bot
Comment 10
2018-02-21 16:10:31 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2018-02-21 16:11:21 PST
<
rdar://problem/37765140
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug