Source/WebKit/NetworkProcess/NetworkProcessCreationParameters.cpp
@@ -94,6 +94,8 @@ void NetworkProcessCreationParameters::encode(IPC::Encoder& encoder) const
     encoder << ignoreTLSErrors;
     encoder << languages;
     encoder << proxySettings;
+#elif USE(CURL)
+    encoder << cookiePersistentStorageFile;
 #endif
 #if HAVE(CFNETWORK_STORAGE_PARTITIONING) && !RELEASE_LOG_DISABLED
     encoder << logCookieInformation;
@@ -227,6 +229,9 @@ bool NetworkProcessCreationParameters::decode(IPC::Decoder& decoder, NetworkProc
     if (!decoder.decode(result.languages))
         return false;
     if (!decoder.decode(result.proxySettings))
+        return false;
+#elif USE(CURL)
+    if (!decoder.decode(result.cookiePersistentStorageFile))
         return false;
 #endif
 
