Source/WebKit/NetworkProcess/NetworkProcessCreationParameters.h
@@ -108,6 +108,8 @@ struct NetworkProcessCreationParameters {
     bool ignoreTLSErrors { false };
     Vector<String> languages;
     WebCore::SoupNetworkProxySettings proxySettings;
+#elif USE(CURL)
+    String cookiePersistentStorageFile;
 #endif
 
 #if HAVE(CFNETWORK_STORAGE_PARTITIONING) && !RELEASE_LOG_DISABLED
