Source/WebKit/WebProcess/Cookies/curl/WebCookieManagerCurl.cpp
@@ -27,6 +27,7 @@
 #include "WebCookieManager.h"
 
 #include "ChildProcess.h"
+#include <WebCore/CookieJarDB.h>
 #include <WebCore/NetworkStorageSession.h>
 #include <wtf/text/CString.h>
 
@@ -41,6 +42,12 @@ void WebCookieManager::platformSetHTTPCookieAcceptPolicy(HTTPCookieAcceptPolicy)
 HTTPCookieAcceptPolicy WebCookieManager::platformGetHTTPCookieAcceptPolicy()
 {
     return HTTPCookieAcceptPolicyOnlyFromMainDocumentDomain;
+}
+
+void WebCookieManager::setCookiePersistentStorage(const String& storagePath)
+{
+    auto& storageSession = NetworkStorageSession::defaultStorageSession();
+    storageSession.setCookieDatabase(makeUniqueRef<CookieJarDB>(storagePath));
 }
 
 } // namespace WebKit
